--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -657,6 +657,8 @@ server {
         rewrite ^/image/thumbnails/wikipedia/[0-9][0-9][0-9]px-(?<original>.*) https://en.wikipedia.org/wiki/File:$original permanent;
         rewrite ^/image/thumbnails/wikipedia/(?<original>.*) https://en.wikipedia.org/wiki/File:$original permanent;
         rewrite ^/metadata/annotations/https%253A%252F%252Fen.wikipedia.org%252Fwiki%252F(?<original>.*)\.html$ https://en.wikipedia.org/wiki/$original permanent;
+        rewrite ^/(?<original>(Category:|Special:|Skin/|Portal:|Talk:|Template_talk:|User:|User_talk:|Wikipedia:).*)$ https://en.wikipedia.org/wiki/$original permanent;
+        rewrite ^/pmwiki/pmwiki.php/(?<original>.*)$ https://tvtropes.org/pmwiki/pmwiki.php/$original permanent;
         rewrite ^/(?<original>doc/.*).Pdf /$original.pdf permanent;
         rewrite ^/(?<original>.*)\&source=gmail /$original permanent;
         rewrite ^/(?<original>emociones/.*) https://competicionmental.appspot.com/$original permanent;
