--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14560,7 +14560,7 @@
 "~^/doc/psychology/learning/1971-bandura-sociallearningtheory\.pdf.*$" "https://libgen.rs/book/index.php?md5=D361C0344BEE96F7AB9D34B600C7EEE7";
 "~^/doc/psychologyindex.*$" "/doc/psychology/index";
 "~^/doc/www/rs.io/null.*$" "https://rs.io/";
-"~^/doc/ai/scaling/hardware/2021-jouppi$" "~/doc/ai/scaling/hardware/2021-jouppi.pdf";
+"~^/doc/ai/scaling/hardware/2021-jouppi$" "/doc/ai/scaling/hardware/2021-jouppi.pdf";
 "~^/doc/psychology/okcupid/howyourraceafthemessagesyouget.html$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
 "~^/doc/ai/2021-porr.pdf$" "/doc/ai/index";
 "~^/complement[a-z-].*$" "/complement";
@@ -15156,8 +15156,8 @@
 "~^/Waterko$" "/water";
 "~^//rss.xml$" "https://gwern.substack.com/feed";
 "~^/cat-earwax.*$" "/earwax";
-"~/[Dd]rop-?caps.*$" "/dropcap";
-"~/[Dd]rop-cap$" "/dropcap";
+"~^/[Dd]rop-?caps.*$" "/dropcap";
+"~^/[Dd]rop-cap$" "/dropcap";
 "~^/doc/cat/catnip/survey/%C3%B0$" "/doc/cat/catnip/survey/index";
 "~^/on-stress.page$" "/stress.md";
 "~^/newsletter/2021/06cosma.*$" "/newsletter/2021/06";
@@ -16276,7 +16276,7 @@
 "~^/doc/psychology/PQ.*$" "/doc/psychology/index";
 "~^/doc/psychology/personality/conscientiousness/1991-barrick.pdfD.*$" "/doc/psychology/personality/conscientiousness/1991-barrick.pdf";
 "~^/doc/modafinil/2004-makris.pd%5Cf$" "/doc/modafinil/2004-makris.pdf";
-"~^/doc/economics/1980-arrow.pdf\|journal.*$" "/doc/economics/1980-arrow.pdf";
+"~^/doc/economics/1980-arrow.pdf.*journal.*$" "/doc/economics/1980-arrow.pdf";
 "~^/doc/darknet-market/2012-01-18-tony76reviews$" "/doc/darknet-market/2012-01-18-tony76reviews.maff";
 "~^/doc/cat/valerian/$" "/doc/cat/psychology/drug/valerian/index";
 "~^/doc/ai/agi/2008-oring-agiproposal\.pdf.*$" "/doc/ai/2008-omohundro.pdf";
@@ -16584,7 +16584,6 @@
 "~^/.adherence.html$" "/doc/biology/2000-iapac-norvir/adherence.html";
 "~^/.abt_byrn.html$" "/doc/biology/2000-iapac-norvir/abt_byrn.html";
 "~^/static/js/MathJax.js$" "https://cdnjs.cloudflare.com/ajax/libs/mathjax/latest/MathJax.js?config=default";
-"~^/static/font/dropcap/ninit/light/C-12-abstract.svg$" "";
 "~^/Self-decrypting.2011.*$" "/self-decrypting";
 "~^/Rules_of_the_Death_Note$" "https://deathnote.fandom.com/wiki/Rules_of_the_Death_Note";
 "~^/Resilient-Haskell-Software.$" "/resilient-software";
@@ -16750,9 +16749,99 @@
 "~^/contacts$" "/me#contact";
 "~^/Nicotine.The$" "/nicotine";
 "~^/doc/ai/nn/gan/stylegan/anime/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/ai/1962Participant.*$" "/doc/ai/index";
+"~^/doc/biology/about/jiapac.html$" "/doc/biology/2000-iapac-norvir/index.html";
+"~^/doc/bitcoin/1982-ijiri-tripleentrybookkeepingand$" "/doc/bitcoin/1982-ijiri-tripleentrybookkeepingandincomemomentum.pdf";
+"~^/doc/CaW.*$" "/doc/index";
+"~^/doc/compnews/abb90630.html$" "https://web.archive.org/web/20000229125251/http://www.iapac.org/compnews/abb90630.html";
+"~^/doc/darknet-market/2020-01-13-kilos-6dnms-reviews.csv.xz.html$" "/doc/darknet-market/2020-01-13-kilos-6dnms-reviews.csv.xz";
+"~^/doc/darknet-market/=3D\?topic=3D124539.msg856241$" "/doc/darknet-market/index";
+"~^/doc/darknet-market/agora/2014-%C3%B0$" "/doc/darknet-market/agora/2014-12-17-agora-willyclock-complaint.pdf";
+"~^/doc/darknet-market/silk-road/1/3D%22file.*$" "/doc/darknet-market/silk-road/1/index";
+"~^/doc/economics/advertising/2019-03-21-%C3%B0$" "/doc/economics/advertising/2019-03-21-googlesurveys-adblocknonusagereasons.csv";
+"~^/doc/fiction/science-fiction/1992-jordan.\.pdf.*$" "/doc/fiction/science-fiction/1992-jordan.pdf";
+"~^/doc/iq/1941-thurstone$" "/doc/iq/1941-thurstone-factorialstudiesofintelligence.pdf";
+"~^/doc/iq/2017-viswesvaran\.pdf.*$" "/doc/iq/2005-viswesvaran.pdf";
+"~^/doc/logo-white-big.png$" "/static/img/logo/logo-whitebg-large-border.png";
+"~^/doc/modafinil/%EF%BF%BD.*$" "/doc/modafinil/index";
+"~^/doc/music/music-distraction/1994-allen$" "/doc/music/music-distraction/1994-allen.pdf";
+"~^/doc/psychology/2020-10-%EF%BF%BD.*$" "/doc/psychology/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave.html";
+"~^/doc/psychology/3169-asch\.pdf.*$" "/doc/psychology/1952-asch.pdf";
+"~^/doc/psychology/4137-asch\.pdf.*$" "/doc/psychology/1952-asch.pdf";
+"~^/doc/psychology/animal/bird/2021-lefebvre-2\.pdf.*$" "/doc/psychology/animal/bird/2021-lefebvre.pdf";
+"~^/doc/reinforcement-learning/armstrong-controlproblem/index$" "/doc/reinforcement-learning/armstrong-controlproblem/index.html";
+"~^/doc/statistics/prediction/2001-armstrong-principlesDe.*$" "/doc/statistics/prediction/2001-armstrong-principlesforecasting.pdf";
+"~^/Alfred_A._Knopf$" "https://en.wikipedia.org/wiki/Alfred_A._Knopf";
+"~^/Exile_and_the_Kingdom$" "https://en.wikipedia.org/wiki/Exile_and_the_Kingdom";
+"~^/First-person_narrative$" "https://en.wikipedia.org/wiki/First-person_narrative";
+"~^/nootropic/Justifications$" "https://en.wikipedia.org/wiki/nootropic/Justifications";
+"~^/Stuart_Gilbert$" "https://en.wikipedia.org/wiki/Stuart_Gilbert";
+"~^/Tablet_\(magazine$" "https://en.wikipedia.org/wiki/Tablet_\(magazine";
+"~^/The_Artist_at_Work$" "https://en.wikipedia.org/wiki/The_Artist_at_Work";
+"~^/The_Coen_Brothers$" "https://en.wikipedia.org/wiki/The_Coen_Brothers";
+"~^/The_Fall_\(Camus_novel$" "https://en.wikipedia.org/wiki/The_Fall_\(Camus_novel";
+"~^/The_First_Man$" "https://en.wikipedia.org/wiki/The_First_Man";
+"~^/The_Gambler_\(2014_film$" "https://en.wikipedia.org/wiki/The_Gambler_\(2014_film";
+"~^/The_Growing_Stone$" "https://en.wikipedia.org/wiki/The_Growing_Stone";
+"~^/The_Guardian$" "https://en.wikipedia.org/wiki/The_Guardian";
+"~^/The_Guest_\(short_story$" "https://en.wikipedia.org/wiki/The_Guest_\(short_story";
+"~^/The_Just_Assassins$" "https://en.wikipedia.org/wiki/The_Just_Assassins";
+"~^/The_Man_Who_Wasn$" "https://en.wikipedia.org/wiki/The_Man_Who_Wasn";
+"~^/The_Meursault_Investigation$" "https://en.wikipedia.org/wiki/The_Meursault_Investigation";
+"~^/The_Misunderstanding$" "https://en.wikipedia.org/wiki/The_Misunderstanding";
+"~^/The_Myth_of_Sisyphus$" "https://en.wikipedia.org/wiki/The_Myth_of_Sisyphus";
+"~^/The_Plague_\(novel$" "https://en.wikipedia.org/wiki/The_Plague_\(novel";
+"~^/The_Possessed_\(play$" "https://en.wikipedia.org/wiki/The_Possessed_\(play";
+"~^/The_Rebel_\(book$" "https://en.wikipedia.org/wiki/The_Rebel_(book";
+"~^/The_Silent_Men$" "https://en.wikipedia.org/wiki/The_Silent_Men";
+"~^/The_State_of_Siege$" "https://en.wikipedia.org/wiki/The_State_of_Siege";
+"~^/The_Stranger_\(1967_film$" "https://en.wikipedia.org/wiki/The_Stranger_(1967_film";
+"~^/The_Stranger_\(Camus_novel$" "https://en.wikipedia.org/wiki/The_Stranger_(Camus_novel";
+"~^/Victor_Brombert$" "https://en.wikipedia.org/wiki/Victor_Brombert";
+"~^/Vintage_Books$" "https://en.wikipedia.org/wiki/Vintage_Books";
+"~^/Wehrmacht$" "https://en.wikipedia.org/wiki/Wehrmacht";
+"~^/static/favicon/wikipedia.ico$" "https://en.wikipedia.org/static/favicon/wikipedia.ico";
+"~^/Why-you-should-never-do-any-work-you-hate$" "/static/404";
+"~^/copyright/$" "/copyright";
+"~^/Cultur$" "/culture-is-not-about-esthetics";
+"~^/doc/anime/eva/1996-newtype$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/2011-house$" "/doc/anime/eva/2011-house";
+"~^/doc/darknet-market/2011-06-25$" "/doc/darknet-market/2011-08-25-baal-operationachilles.html";
+"~^/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.htmWay$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/darknet-market/2013-0$" "/doc/darknet-market/index";
+"~^/doc/genetics/selection/www.mountimprobable.com/about/assets/images/right-yellow.svg$" "/doc/genetics/selection/www.mountimprobable.com/assets/images/right-yellow.svg";
+"~^/doc/history/2019-09-18-0$" "/doc/history/2019-09-18-medievalindonesia-thelandshuterhochzeit1475.html";
+"~^/doc/823$" "/doc/index";
+"~^/doc/iqi\.pdf.*$" "/doc/iq/index";
+"~^/doc/longevity/2305-decabo\.pdf.*$" "/doc/longevity/2019-decabo.pdf";
+"~^/doc/music/music-distraction/2005-lesiu$" "/doc/music/music-distraction/2005-lesiuk.pdf";
+"~^/doc/2004-morgan\.pdf.*$" "/doc/nicotine/2004-morgan.pdf";
+"~^/doc/nootropic/quantified-self/2015-1$" "/doc/nootropic/quantified-self/2014-08-03-lllt-correlation.csv";
+"~^/doc/2011-gwern-yourmorals.org/cogref_process.php_files/surveyresults_graph_libcon.png$" "/doc/personal/2011-gwern-yourmorals.org/epbs2_process.php_files/surveyresults_graph_libcon.png";
+"~^/doc/2011-gwern-yourmorals.org/busethics_process.php_files/surveyresults_graph_sex.png$" "/doc/personal/2011-gwern-yourmorals.org/srpsf_process.php_files/surveyresults_graph_sex.png";
+"~^/doc/psychopathy$" "/doc/psychiatry/psychopathy/index";
+"~^/doc/psychology/8937-asch\.pdf.*$" "/doc/psychology/1952-asch.pdf";
+"~^/doc/rotten.com/library/imagery/subliminal/bbp/ad2.jpg$" "/doc/rotten.com/library/imagery/subliminal/advertising/bbp/ad2.jpg";
+"~^/doc/rotten.com/art/$" "/doc/rotten.com/library/index.html";
+"~^/doc/dnb/2003-krum\.pdf.*$" "/doc/statistics/bias/2003-krum.pdf";
+"~^/doc/statistics/decision/1957-bellman-dynamicprogram-ming\.pdf.*$" "/doc/statistics/decision/1957-bellman-dynamicprogramming.pdf";
+"~^/doc/statistics/1960-kelley\.pdf.*$" "/doc/statistics/decision/1960-kelley.pdf";
+"~^/AB-testing/index.html$" "/ab-testing";
+"~^/static/style.css$" "/doc/statistics/order/beanmachine-multistage/style.css";
+"~^/doc/technology/2018-07$" "/doc/technology/2018-07-25-johnbackus-howdecentralizationevolves.html";
+"~^/GPT03$" "/gpt-3";
+"~^/GPT-3Branwen$" "/gpt-3";
+"~^/GPT-3St$" "/gpt-3";
+"~^/video$" "/static/404";
+"~^/static/font/NotoEmoji-SemiBold.ttf$" "/static/font/noto-emoji/NotoEmoji-SemiBold.ttf";
+"~^/doc/cat/psychology/favicon.ico$" "/static/img/favicon.ico";
+"~^/Statisticalnotes$" "/statistical-notes";
+"~^/thumb/$" "/static/404";
+"~^/Milk\?.*$" "/milk";
+"~^/Se$" "/search";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
-"~/.*mailto:.*$" "/static/404";
+"~^/.*mailto:.*$" "/static/404";
 "~^/.*/\.git/.*$" "/static/404";
 "~^.*/GET$" "/static/404";
 "~^.*/POST$" "/static/404";
@@ -22450,7 +22539,7 @@
 "~^/nagiosxi/.*$" "/static/404";
 "~^/tunnel\?.*$" "/static/404";
 "~^/zc_install/.*$" "/static/404";
-"~^/.*bakudeku-.*.*$" "/static/404";
+"~^/.*bakudeku.*$" "/static/404";
 "~^/logon.htm.*$" "/static/404";
 "~^/yGl0.*$" "/static/404";
 "~^/xn--vj1bt3grhn5d86iqlal85c9vwm.*$" "/static/404";
@@ -22510,7 +22599,7 @@
 "~^/invoke/.*$" "/static/404";
 "~^/[a-z]+\.sh$" "/static/404"; # /test.sh, /reminder.sh etc
 "~^/.*88\.xyz.*$" "/static/404";
-"~^/.*/.*/service\.jsp(;|%0a)+.*\.css$" "/static/404";
+"~^/.*/.*/service\.jsp.*\.css$" "/static/404";
 "~^/[a-z]+bet\.com$" "/static/404";
 "~^/[a-z]+bet\.com/.*$" "/static/404";
 "~^/Filemgr/.*$" "/static/404";
