--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -10732,7 +10732,7 @@ default "";
 "~^/doc/biology/2024-kallas-figure2-survivalcurveofdengueinfectionwithbutantandenguevaccine.png.*$" "/doc/biology/2024-kallas-figure2-survivalcurveofdengueinfectionwithbutantandenguevaccine.jpg";
 "~^/doc/sociology/2023-yang-3-figure3-funnelplot.png.*$" "/doc/sociology/2023-yang-3-figure3-funnelplot.jpg";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-21-gwern-midjourneyv5-dropcat-uppercasecapitallettertcursiveitalic.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-21-gwern-midjourneyv5-dropcat-uppercasecapitallettertcursiveitalic.jpg";
-"~/doc/www/openarchive.ki.se/0f825aa17f149f78075ea84cdc5e03864d6b97b8.*$" "/doc/crime/2014-latvala.pdf";
+"~^/doc/www/openarchive.ki.se/0f825aa17f149f78075ea84cdc5e03864d6b97b8.*$" "/doc/crime/2014-latvala.pdf";
 "~^/doc/statistics/bias/2021-kasy.pdf.*$" "/doc/statistics/bias/publication/2021-kasy.pdf";
 "~^/doc/statistics/bias/2008-gerber.pdf.*$" "/doc/statistics/bias/publication/2008-gerber.pdf";
 "~^/doc/statistics/bias/2023-maier.pdf.*$" "/doc/statistics/bias/publication/2023-maier.pdf";
