--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16839,6 +16839,7 @@
 "~^/thumb/$" "/static/404";
 "~^/Milk\?.*$" "/milk";
 "~^/Se$" "/search";
+"~^/cyao.*$" "/cyoa";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*mailto:.*$" "/static/404";
