update for new GHC warnings; +

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -39,8 +39,9 @@ server {
 
         limit_except GET { deny all; } # block scanners/botnets from spamming POST and other garbage
 
-        location ~ ^/(confidential|private|secret)/ { auth_basic "Non-Public Pages";
-                                                      auth_basic_user_file /etc/nginx/.htpasswd; }
+        location ~ ^/(confidential|private|secret|metadata/annotation/link-bibliography/%2Fconfidential|metadata/annotation/link-bibliography/%2Fprivate|metadata/annotation/link-bibliography/%2Fsecret)/ {
+                 auth_basic "Non-Public Pages";
+                 auth_basic_user_file /etc/nginx/.htpasswd; }
 
         # for linkArchive.sh/LinkArchive.hs: ensure that no crawlers pick up my mirrors, to reduce DMCA risk.
         location /doc/www/               { add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; ssi off; }
