--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16840,6 +16840,7 @@
 "~^/Milk\?.*$" "/milk";
 "~^/Se$" "/search";
 "~^/cyao.*$" "/cyoa";
+"~^/doc/personal/2018-07-29-gwern.*$" "/doc/personal/2018-06-26-gwern-workstation-gpusatnight.jpg";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*mailto:.*$" "/static/404";
