--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -8572,7 +8572,7 @@
 "~^/metadata/annotations/https%253A%252F%252Fen.wikipedia.org%252Fwiki%252FTyler_Winklevoss.html$" "/metadata/annotations/https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FTyler_Winklevoss.html";
 "~^/metadata/annotations/https%253A%252F%252Finstant.page%252F.html$" "/metadata/annotations/https%3A%2F%2Finstant.page.html";
 "~^/metadata/annotations/https%253A%252F%252Fwww.biorxiv.org%252Fcontent%252F10.1101%252F2021.02.02.429430v1.html$" "/metadata/annotations/https%3A%2F%2Fwww.biorxiv.org%2Fcontent%2F10.1101%2F2021.02.02.429430v1.html";
-"~^/metadata/annotations/https%253A%252F%252Fwww.biorxiv.org%252Fcontent%252F10.1101%252F687681v1.full.html$" "/metadata/annotations/https%3A%2F%2Fwww.biorxiv.org%2Fcontent%2F10.1101%2F687681v1.full.html";
+"~^/metadata/annotations/https%253A%252F%252Fwww.biorxiv.org%252Fcontent%252F10.1101%252F687681v1.full.html$" "/metadata/annotations/https%3A%2F%2Fwww.biorxiv.org%2Fcontent%2F10.1101%2F687681.full.html";
 # "~^/metadata/annotations/https://www.thisfursonadoesnotexist.com.html$" "/metadata/annotations/https%3A%2F%2Fwww.thisfursonadoesnotexist.com.html";
 "~^/archive.hs.*$" "/metadata/archive.hs";
 "~^/archive.hs.html.*$" "/metadata/archive.hs.html";
