--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -3910,7 +3910,7 @@ default "";
 "~^/doc/reinforcement-learning/2021-mirhoseini.pdf.*$" "/doc/reinforcement-learning/model/2021-mirhoseini.pdf";
 "~^/doc/reinforcement-learning/2021-scanlon.pdf.*$" "/doc/reinforcement-learning/model/2021-scanlon.pdf";
 "~^/doc/psychology/personality/2020-anderson.pdf.*$" "/doc/psychology/personality/conscientiousness/2020-anderson.pdf";
-"~^/doc/iq/2019-allegrini.pdf.*$" "https://www.biorxiv.org/content/10.1101/418210v1.full";
+"~^/doc/iq/2019-allegrini.pdf.*$" "https://www.biorxiv.org/content/10.1101/418210.full";
 "~^/doc/ai/scaling/2018-sandberg.pdf.*$" "/doc/ai/scaling/hardware/2018-sandberg.pdf";
 "~^/doc/ai/2018-fu.pdf.*$" "/doc/ai/nn/2018-fu.pdf";
 "~^/doc/ai/1986-jordan.pdf.*$" "/doc/ai/nn/rnn/1986-jordan.pdf";
