--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11371,3 +11371,4 @@ default "";
 "~^/2002-treffert.pdf.*$" "/doc/psychology/neuroscience/memory/savant/2002-treffert.pdf";
 "~^/2013-mecacci.pdf.*$" "/doc/psychology/neuroscience/memory/savant/2013-mecacci.pdf";
 "~^/doc/psychology/1962-hunter.pdf.*$" "/doc/psychology/neuroscience/memory/savant/1962-hunter.pdf";
+"~^/doc/psychology/2021-sherman.pdf.*$" "/doc/psychology/neuroscience/2021-sherman.pdf";
