migrate all Twitter.com -> X.com given official Musk announcement <https://x.com/elonmusk/status/1791351500217754008> & the hard redirects now imposed on twitter.com URLs
As Musk has a strange obsession with 'X' and has been ramming this through for years now despite it being a branding disaster, there is no hope he's going to give up on it and revert x.com->twitter.com /sigh. So might as well make a clean thorough break.

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -7485,10 +7485,10 @@
 "~^/item\?id=18675280.*$" "https://news.ycombinator.com/item?id=18675280";
 "~^/item\?id=18708876.*$" "https://news.ycombinator.com/item?id=18708876";
 "~^/item\?id=20366039.*$" "https://news.ycombinator.com/item?id=20366039";
-"~^/nitter.hu$" "https://twitter.com/";
-"~^/noamchomskyT/status/952716484123529216$" "https://twitter.com/noamchomskyt/status/952716484123529216";
-"~^/https://nitter.hu/search-advanced?lang=en.*$" "https://twitter.com/search-advanced?lang=en";
-"~^/https://nitter.hu/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd.*$" "https://twitter.com/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd";
+"~^/nitter.hu$" "https://x.com/";
+"~^/noamchomskyT/status/952716484123529216$" "https://x.com/noamchomskyt/status/952716484123529216";
+"~^/https://nitter.hu/search-advanced?lang=en.*$" "https://x.com/search-advanced?lang=en";
+"~^/https://nitter.hu/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd.*$" "https://x.com/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd";
 "~^/noahpinionblog.blogspot.com/2013/03/stimulus-tools-policy-vs-politics.html.*$" "https://noahpinionblog.blogspot.com/2013/03/stimulus-tools-policy-vs-politics.html";
 "~^/search\?hl\=en\&q=henry\+darger.*$" "https://nostalgebraist.livejournal.com/68532.html";
 "~^/ttft/print/TTFT\.pdf.*$" "https://numinous.productions/ttft/print/TTFT.pdf";
@@ -7614,8 +7614,8 @@
 "~^/doc/www/tthqi.free.fr/BOUTONS/NOTRE%20IDEAL%20dessus.png.*$" "https://tthqi.free.fr/BOUTONS/NOTRE%20IDEAL%20dessus.png";
 "~^/How-to-Succeed-in-Evil$" "https://tvtropes.org/pmwiki/pmwiki.php/Literature/HowToSucceedInEvil";
 "~^/_Twig.*$" "https://twigserial.wordpress.com/";
-"~^/tags/tweets.*$" "https://twitter.com/gwern/";
-"~^/doc/www/twitter.com/i/events/1515043053328814092.*$" "https://twitter.com/i/events/1515043053328814092";
+"~^/tags/tweets.*$" "https://x.com/gwern/";
+"~^/doc/www/twitter.com/i/events/1515043053328814092.*$" "https://x.com/i/events/1515043053328814092";
 "~^/Canadian_Oil_Production_1960_to_2020.png.*$" "https://upload.wikimedia.org/wikipedia/commons/b/b8/Canadian_Oil_Production_1960_to_2020.png";
 "~^/doc/www/wikimediafoundation.org/b42d52331d608de61a833777a0c008cb70cc8b8c\.pdf.*$" "https://upload.wikimedia.org/wikipedia/foundation/c/ca/UK_BOARD_MEETING.pdf";
 "~^/127151912269416112700_20100418004522.jpg.*$" "https://userdisk.webry.biglobe.ne.jp/012/101/82/N000/000/001/127151912269416112700_20100418004522.jpg";
@@ -15341,7 +15341,7 @@
 "~^/caffiene$" "/zeo/caffeine";
 "~^/side$" "/sidenote";
 "~^/.*/spacer.gif$" "https://www.facebook.com/images/spacer.gif";
-"~^/.*nitter.net/teddyschleifer/status/1726644226006700522$" "https://twitter.com/teddyschleifer/status/1726644226006700522";
+"~^/.*nitter.net/teddyschleifer/status/1726644226006700522$" "https://x.com/teddyschleifer/status/1726644226006700522";
 "~^/Wikipedia-resume\?revision.*$" "/wikipedia-resume";
 "~^/newsletter/2021/03ri.*$" "/newsletter/2021/03";
 "~^/fiction/.*/Danbooru2018$" "/danbooru2018";
@@ -22282,7 +22282,7 @@
 "~^/miamitelevision.*$" "/static/404";
 "~^/meta\.json.*$" "/static/404";
 "~^/betvisa.*$" "/static/404";
-"~^/izzyz.*$" "/static/404"; # see https://twitter.com/izzyz/status/1644195172048343041
+"~^/izzyz.*$" "/static/404"; # see https://x.com/izzyz/status/1644195172048343041
 "~^/static/template/include/\".tmpl.*$" "/static/404";
 "~^/cscosslc/.*$" "/static/404";
 "~^/.*\.svc$" "/static/404";
