--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16841,8 +16841,8 @@
 "~^/Se$" "/search";
 "~^/cyao.*$" "/cyoa";
 "~^/doc/personal/2018-07-29-gwern.*$" "/doc/personal/2018-06-26-gwern-workstation-gpusatnight.jpg";
-"~/llm-catapult.*$" "/private/llm-catapult";
-"~/.*llm-slingshot.*$" "/private/llm-catapult";
+"~^/llm-catapult.*$" "/private/llm-catapult";
+"~^/.*llm-slingshot.*$" "/private/llm-catapult";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*mailto:.*$" "/static/404";
