--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16843,6 +16843,8 @@
 "~^/doc/personal/2018-07-29-gwern.*$" "/doc/personal/2018-06-26-gwern-workstation-gpusatnight.jpg";
 "~^/llm-catapult.*$" "/private/llm-catapult";
 "~^/.*llm-slingshot.*$" "/private/llm-catapult";
+"~^/[Ss]am-[Aa]ltman.*$" "/altman";
+"~^/Altman.*$" "/altman";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*mailto:.*$" "/static/404";
