--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11382,3 +11382,18 @@ default "";
 "~^/doc/economics/1979-jensen.pdf.*$" "/doc/economics/1979-jensen-3.pdf";
 "~^/static/search.html.*$" "/static/google-cse.html";
 "~^/doc/dual-n-back/1999-fratiglioni.pdf.*$" "/doc/psychiatry/alzheimers/1999-fratiglioni.pdf";
+"~^/doc/algernon/2012-klein.pdf.*$" "/doc/psychology/cognitive-bias/2012-klein.pdf";
+"~^/doc/iq/1922-terman.pdf.*$" "/doc/iq/low/1922-terman.pdf";
+"~^/doc/iq/2020-09-12-bosco-onrereadingmcnamarasfolly.html.*$" "/doc/iq/low/2020-09-12-bosco-onrereadingmcnamarasfolly.html";
+"~^/doc/genetics/heritable/2002-baker.pdf.*$" "/doc/genetics/heritable/rare/2002-baker.pdf";
+"~^/doc/genetics/heritable/1985-defries.pdf.*$" "/doc/genetics/heritable/rare/1985-defries.pdf";
+"~^/doc/psychology/1993-brand-painthegiftnobodywants.pdf.*$" "/doc/psychology/neuroscience/pain/1993-brand-painthegiftnobodywants.pdf";
+"~^/doc/psychology/1996-melzack-thechallengeofpain.pdf.*$" "/doc/psychology/neuroscience/pain/1996-melzack-thechallengeofpain.pdf";
+"~^/doc/psychology/1932-dearborn.pdf.*$" "/doc/psychology/neuroscience/pain/1932-dearborn.pdf";
+"~^/doc/psychology/neuroscience/1999-ploner.pdf.*$" "/doc/psychology/neuroscience/pain/1999-ploner.pdf";
+"~^/doc/psychology/1959-barber.pdf.*$" "/doc/psychology/neuroscience/pain/1959-barber.pdf";
+"~^/doc/psychology/2018-martin.pdf.*$" "/doc/psychology/willpower/2018-martin.pdf";
+"~^/doc/psychology/neuroscience/2023-farnsworth.pdf.*$" "/doc/psychology/neuroscience/pain/2023-farnsworth.pdf";
+"~^/doc/psychiatry/2022-soper.pdf.*$" "/doc/psychiatry/depression/2022-soper.pdf";
+"~^/doc/psychology/2008-mashour.pdf.*$" "/doc/psychology/neuroscience/pain/anesthesia/2008-mashour.pdf";
+"~^/doc/psychology/neuroscience/2004-sebel.pdf.*$" "/doc/psychology/neuroscience/pain/anesthesia/2004-sebel.pdf";
