--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16845,8 +16845,17 @@
 "~^/.*llm-slingshot.*$" "/private/llm-catapult";
 "~^/[Ss]am-[Aa]ltman.*$" "/altman";
 "~^/Altman.*$" "/altman";
+"~^/writings/doc/statistics/bayes/1994-fal$" "/doc/statistics/bayes/1994-falk";
+"~^/texarchive/language/hyph-utf8$" "https://ctan.org/tex-archive/language/hyph-utf8";
+"~^/doc/culture/2010-dobelli.pdfj$" "/doc/culture/2010-dobelli.pdf";
+"~^/doc/1999-vanstuijvenberg\.pdf.*$" "/doc/iodine/1999-vanstuijvenberg.pdf";
+"~^/doc/personal/2011-1$" "/doc/personal/index";
+"~^/benter.*$" "//doc/statistics/decision/1994-benter.pdf";
+"~/writings$" "/index";
+"~^//about.*$" "/about";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
+"~^/2EF8E3DF.*$" "/static/404";
 "~^/.*mailto:.*$" "/static/404";
 "~^/.*/\.git/.*$" "/static/404";
 "~^.*/GET$" "/static/404";
