--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16853,6 +16853,40 @@
 "~^/benter.*$" "//doc/statistics/decision/1994-benter.pdf";
 "~/writings$" "/index";
 "~^//about.*$" "/about";
+"~^/doc/statistics/decision/2022-boettiger.pdf%5C.*$" "/doc/statistics/decision/2022-boettiger.pdf";
+"~^/doc/ai/scaling/2012-bottou.pdf%5C.*$" "/doc/ai/scaling/2012-bottou.pdf";
+"~^/doc/ai/nn/fully-connected/1988-lang.pdf%5C.*$" "/doc/ai/nn/fully-connected/1988-lang.pdf";
+"~^/static/build/list-columns.hs$" "/static/build/Columns.hs";
+"~^/neurofeedback$" "https://en.wikipedia.org/wiki/neurofeedback";
+"~^/static/custom.yaml$" "/metadata/full.gtx";
+"~^/Ontological.*$" "/ontological-pantheism";
+"~^/haskell/.*Wikipedia-Link-Archive-Bot.*$" "/haskell/wikipedia-archive-bot";
+"~^/GPT-3Home.*$" "/gpt-3";
+"~^/google-alert\?utm.*$" "/google-alert";
+"~^/End-To-End$" "/doc/cs/end-to-end-principle/index";
+"~^/embryo-selectionEmbryo.*$" "/embryo-selection";
+"~^/doc/statistics/bayes/1994-fal$" "/doc/statistics/bayes/1994-falk";
+"~^/doc/sr/2019-04-22-deepdotweb-dnmlist.*$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/sociology/2021-%C3%83%.*$" "/doc/sociology/";
+"~^/doc/Rt.*$" "/doc/index";
+"~^/doc/cat/psychology/2013-nicastro\.pdf.*$" "/doc/cat/psychology/index";
+"~^/doc/cat/psychology/2010-bradshaw\.pdf.*$" "/doc/cat/psychology/index";
+"~^/11.*-index.html$" "/index";
+"~^/Benter$" "//doc/statistics/decision/1994-benter.pdf";
+"~^/gpt-1$" "https://openai.com/research/language-unsupervised";
+"~^/doc/darknet-market/2019-04-22deepdotweb-dnmlist.html$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/politic$" "/doc/politics/index";
+"~^/doc/longevity/4675-decabo\.pdf.*$" "/doc/longevity/2019-decabo.pdf";
+"~^/doc/personal/rss-subscriptions.op$" "/doc/personal/rss-subscriptions.opml";
+"~^/doc/sociology/1987-rossi/$" "/doc/sociology/1987-rossi";
+"~^/doc/genetics/selection/natural/human/www/arxiv.org/211d34c2a9a934d71a2f8d893e24a8ff0453038d\.pdf.*$" "/doc/www/arxiv.org/211d34c2a9a934d71a2f8d893e24a8ff0453038d.pdf";
+"~^/mlpgenetic$" "/mlp-genetics";
+"~^/nootrop$" "/nootropic/nootropic";
+"~^/spaced-repetitiom$" "/spaced-repetition";
+"~^/Suzanne-Delag$" "/suzanne-delage";
+"~^/[Bb]it-?creep.*$" "/holy-war#bitcreep";
+"~^/doc/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming$" "/doc/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming-500completions.txt";
+"~^/holy-war-.*$" "/holy-war";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/2EF8E3DF.*$" "/static/404";
@@ -22721,6 +22755,79 @@
 "~^/hcg-injections.*$" "/static/404";
 "~^/.*weight-loss-tips/.*$" "/static/404";
 "~^/.avatar/.*$" "/static/404";
+"~^/1\.4\.3/.*$" "/static/404";
+"~^/\(1430\)\.4.*$" "/static/404";
+"~^/AccessNow/.*$" "/static/404";
+"~^/ajaz/.*$" "/static/404";
+"~^/ambbetlak.*$" "/static/404";
+"~^/API/.*$" "/static/404";
+"~^/Article/.*$" "/static/404";
+"~^/ashx/.*$" "/static/404";
+"~^/aspx/.*$" "/static/404";
+"~^/bduedit/.*$" "/static/404";
+"~^/BLOG/.*$" "/static/404";
+"~^/britishlibrary/.*$" "/static/404";
+"~^/build/.*$" "/static/404";
+"~^/case/.*$" "/static/404";
+"~^/classicapi/.*$" "/static/404";
+"~^/Company/.*$" "/static/404";
+"~^/composer/.*$" "/static/404";
+"~^/conn/.*$" "/static/404";
+"~^/eclipsemartialartsupplies.*$" "/static/404";
+"~^/emailafriend.*$" "/static/404";
+"~^/_fragment.*$" "/static/404";
+"~^/geoip/.*$" "/static/404";
+"~^/GL/.*$" "/static/404";
+"~^/Handler/.*$" "/static/404";
+"~^/htmleditor/.*$" "/static/404";
+"~^/idm/.*$" "/static/404";
+"~^/Js/.*$" "/static/404";
+"~^/jscript/.*$" "/static/404";
+"~^/link/.*$" "/static/404";
+"~^/lrs/.*$" "/static/404";
+"~^/LUEditor/.*$" "/static/404";
+"~^/music-cardi-b.*$" "/static/404";
+"~^/net\?action.*$" "/static/404";
+"~^/not_allowed.*$" "/static/404";
+"~^/odinhttpcall.*$" "/static/404";
+"~^/pdf/.*$" "/static/404";
+"~^/Plugins/.*$" "/static/404";
+"~^/plugs/.*$" "/static/404";
+"~^/Plugs/.*$" "/static/404";
+"~^/reference.*$" "/static/404";
+"~^/Reply\.jtp.*$" "/static/404";
+"~^/reprints.*$" "/static/404";
+"~^/riot-core-services/.*$" "/static/404";
+"~^/Script/.*$" "/static/404";
+"~^/SdUeditor/.*$" "/static/404";
+"~^/shareddata/.*$" "/static/404";
+"~^/siteadmin/.*$" "/static/404";
+"~^/site_name_com.*$" "/static/404";
+"~^/sito/.*$" "/static/404";
+"~^/static/.*$" "/static/404";
+"~^/studio/.*$" "/static/404";
+"~^/sysadm/.*$" "/static/404";
+"~^/systembc/.*$" "/static/404";
+"~^/textarea/.*$" "/static/404";
+"~^/Themes/.*$" "/static/404";
+"~^/UeController.*$" "/static/404";
+"~^/uedit1/.*$" "/static/404";
+"~^/uedit111/.*$" "/static/404";
+"~^/uedit2/.*$" "/static/404";
+"~^/UEditor.*$" "/static/404";
+"~^/UMditor/.*$" "/static/404";
+"~^/umeditor.*$" "/static/404";
+"~^/upfile/.*$" "/static/404";
+"~^/UserControls/.*$" "/static/404";
+"~^/Uti1ity/.*$" "/static/404";
+"~^/verso/.*$" "/static/404";
+"~^/views/.*$" "/static/404";
+"~^/vmos/.*$" "/static/404";
+"~^/wcsstore/.*$" "/static/404";
+"~^/web20131127005644im_/.*$" "/static/404";
+"~^//wp-json/.*$" "/static/404";
+"~^/yzmphp/.*$" "/static/404";
+"~^/.*ThinkPHP/.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
